kubernetes/apps/intel-device-plugin/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: intel-gpu
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
